	  for periodic endponts (interrupt and isochronous) (2013-8-22).
	* include/nuttx/serial/serial.h and arch/arm/src/stm32/chip/stm32f40xxx_pinmap.h:
	  SourceForge bug #16 Fix IO pin map. Add CONFIG_SERIAL_TERMIOS support.
	  Also fixes some STM32 F4 Timer 8 pin configurations.  From CCTSAO
	  (2013-8-23).
	* arch/arm/src/lpc17xx/lpc17_usbhost.h:  Fix #endif with missing #if
	  condition.  Reported by Andrew Bradford (2013-8-23).
	* nuttx/arch/arm/src/sama5/sam_ehci.c:  Now handles low- and full-speed
	  connections by giving the port to the OHCI driver (2013-8-24).
	* nuttx/arch/arm/src/sama5/sam_ohci.c:  Now uses the work queue to
	  defer interrupt processing (2013-8-24).
	* nuttx/arch/arm/src/sama5/sam_ohci.c and nuttx/arch/arm/src/sama5/sam_ehci.c:
	  EHCI is now the common interrupt "master."  It will receive all UHPHS
	  interrupts and route the interrupt event to both the OHCI and EHCI
	  logic (2013-8-24).
	* net/uip/uip_arp.c:  Correct backward condition in netmask task.
	  From Max Holtzberg (2013-8-25).
	* arch/arm/src/sama5/sam_ohci.c:  SAMA5 OHCI is again functional by
	  itself after all of the changes to integrate with EHCI. (2013-8-25).
	* drivers/net/encx24j600.c/.h and include/nuttx/net/encx24j600.h: 
	  Support the Microchip ENCX24J600 Ethernet driver from Max Holtberg
	  (2013-8-25).
	* configs/olimex-stm32-p107:  Incorporate ENCX24J600 support for the
	  Olimex STM32 P107 board.  From Max Holtzberg (2013-8-25).
	* fs/romfs/fs_romfsutil.c:  Fix an error where long (>15) file names
	  were read incorrectly from a ROMFS file system.  From Mike Smith
	  (2013-8-25).
	* arch/arm/src/stm32/stm32_sdio.c: SourceForge bug #17 Fix if
	  CONFIG_SDIO_BLOCKSETUP defined, OS will crash". Generate an error
	  if CONFIG_SDIO_BLOCKSETUP is defined; that option is not yet supported
	  by the STM32 SDIO driver.  From CCTSAO (2013-6-26)
	* drivers/net/encx24j600.c and .h: Use the ENC's SRAM for multiple TX
	  packets.  From Max Holtzberg (2013-6-26).
