@@ -3434,9 +3434,10 @@ extern void up_ledoff(int led);
     </p>
     <p>
       <b>Examples</b>:
-      <code>arch/arm/src/lpc17xx/lpc17_usbhost.c</code>.
-      <code>arch/arm/src/stm32/stm32_otgfshost.c</code>.
-      <code>arch/arm/src/sama5/sam_ohci.c</code>.
+      <code>arch/arm/src/lpc17xx/lpc17_usbhost.c</code>,
+      <code>arch/arm/src/stm32/stm32_otgfshost.c</code>,
+      <code>arch/arm/src/sama5/sam_ohci.c</code>, and
+      <code>arch/arm/src/sama5/sam_ehci.c</code>.
     </p>
   </li>
   <li>
